[package]
name = "boot-validator"
version = "0.1.0"
edition = "2021"
authors = ["Dennis Vesterlund"]
description = "Verify files in a directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
toml = "0.8.10"
